--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,36 @@
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+:root {
+  --color-text-main: #121417;
+  --color-text-second: rgba(18, 20, 23, 0.50);
+  --color-text-conditions: #363535;
+  --color-text-button-and-back: #FFF;
+  --color-text-loadmore: #3470FF;
+  --color-text-loadmore-hover: #0B44CD;
+  --color-text-label: #8A8A89;
+  --color-button: #3470FF;
+  --color-button-hover: #0B44CD;
+  --color-filter-field: #F7F7FB;
+  --color-back-conditions: #F9F9F9;
+  --color-modal-wrap: rgba(18, 20, 23, 0.50);
 }
+body {
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
+    background-color: var(--color-text-button-and-back);
+      font-family: 'Manrope', sans-serif;
+      font-weight: 400;
+      font-size: 12px;
+      font-style: normal;
+      line-height: 1.5;
+      color: #fff;
+      width: 100%;
+      /* height: 100vh; */
+      margin: 0;
+}
+
+/* code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+} */
 
 h1,
 h2,
@@ -14,38 +40,29 @@ h5,
 h6,
 p {
   margin: 0;
-  padding: 0;
 }
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
+
 a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+img{
+    display: block;
+    max-width: 100%;
+    height: 100%;
+    width: 100%;
+}
+
 button {
   cursor: pointer;
-  font-family: inherit;
 }
 
-img {
-  display: block;
-  height: auto;
-}
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
 }
