--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
       font-size: 12px;
       font-style: normal;
       line-height: 1.5;
-      color: #fff;
+      color:  #121417;
       width: 100%;
       /* height: 100vh; */
       margin: 0;
